--- a/src/main/dart/web/index.html
+++ b/src/main/dart/web/index.html
@@ -14,8 +14,18 @@
 </head>
 
 <body>
+<nav>
+    <a href="index.html">Index</a>
+</nav>
 
   <div id="output"></div>
+
+
+  <p>I'm the content!! - Index1</p>
+  <div id="app">Loading...</div>
+  <div id="tstest">Click me</div>
+  <hr> Version 1.0.0
+  <br>
 
 </body>
 </html>
