--- a/src/main/dart/web/index.html
+++ b/src/main/dart/web/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico">
     <script defer src="main.dart.js"></script>
-    <script defer src="assets/js/exports.js"></script>
+    <script defer src="assets/js/index.js"></script>
+    <script defer src="assets/js/styles.js"></script>
 </head>
 
 <body>
@@ -27,5 +28,11 @@
   <hr> Version 1.0.0
   <br>
 
+<di>
+    <h3>TypeScript</h3>
+    <p>Dynamisch über Script</p>
+    <img id="frontImg"/>
+
+</di>
 </body>
 </html>
