--- a/src/site/_partials/nav.html
+++ b/src/site/_partials/nav.html
@@ -1,7 +1,3 @@
 <nav>
-    <a href="index.html">
-        <i class="material-icons">home</i>
-        Home
-    </a>
-    <span class="spacer"></span>
+    <!--<a href="index.html">Index</a> -->
 </nav>
